--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -338,7 +338,7 @@
     <string name="menu_language">Language</string>
     <string name="language_system_default">Use System Language</string>
 
-    <string name="fab_restore_ledger">Restore from Ledger Nano S</string>
+    <string name="fab_restore_ledger">Restore from Ledger Nano</string>
 
     <string name="progress_ledger_progress">Communicating with Ledger</string>
     <string name="progress_ledger_confirm">Confirmation on Ledger required!</string>
