--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -422,13 +422,13 @@ aqui.</string>
     <string name="menu_deletecache">Resetar carteira!</string>
     <string name="deletecache_alert_message"><![CDATA[Esta carteira será resetada, perdendo todos os dados "off-chain" (como notas, contas & nomes de subendereços, chaves de transações privadas, …)! Use isso SOMENTE se esta carteira estiver corrompida e não carrega!]]></string>
 
-    <string name="node_tor_error">Tor required</string>
-    <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
-    <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
+    <string name="node_tor_error">Necessário Tor</string>
+    <string name="node_waiting">\u00A0ESPERANDO PELO NÓ\u00A0</string>
+    <string name="tor_enable_background">"Permitir inicializações em segundo plano" nas opções do Orbot para usar o Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
 
-    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
-    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
+    <string name="label_seed_offset_encrypt">Encriptação da Semente (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Senha de dedução da semente (opcional)</string>
 
     <string name="menu_settings">Settings</string>
     <string name="title_iface">Interface</string> <!-- like: User Intreface -->
