remove S for Nano

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -445,7 +445,7 @@
     <string name="language_system_default">زبان سیستم</string>
 
     <string name="fab_restore_ledger">
-    بازیابی از Ledger Nano S
+    بازیابی از Ledger Nano
     </string>
 
     <string name="progress_ledger_progress">در حال ارتباط با لجر</string>
