--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -132,7 +132,7 @@
     <string name="label_wallet_receive">Fogadás</string>
     <string name="label_wallet_send">Küldés</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR függőben</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s függőben</string>
 
     <string name="service_description">monerujo szolgáltatás</string>
 
