--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -134,7 +134,7 @@
     <string name="label_wallet_receive">受取り</string>
     <string name="label_wallet_send">送金</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR が未承認</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s が未承認</string>
 
     <string name="service_description">monerujo のサービス</string>
 
