--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -133,7 +133,7 @@
     <string name="label_wallet_receive">Prijať</string>
     <string name="label_wallet_send">Poslať</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR nepotvrdených</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s nepotvrdených</string>
 
     <string name="service_description">monerujo Service</string>
 
