--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -136,7 +136,7 @@
     <string name="label_wallet_receive">பெறு</string>
     <string name="label_wallet_send">அனுப்பு</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR உறுதிப்படுத்தப்படவில்லை</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s உறுதிப்படுத்தப்படவில்லை</string>
 
     <string name="service_description">monerujo சேவை</string>
 
