--- a/app/src/main/res/values-cat/strings.xml
+++ b/app/src/main/res/values-cat/strings.xml
@@ -134,7 +134,7 @@
     <string name="label_wallet_receive">Rebre</string>
     <string name="label_wallet_send">Enviar</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR sense confirmar</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s sense confirmar</string>
 
     <string name="service_description">Servei de monerujo</string>
 
