--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -134,7 +134,7 @@
     <string name="label_wallet_receive">Ricevi</string>
     <string name="label_wallet_send">Doni</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR nekonfirmite</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s nekonfirmite</string>
 
     <string name="service_description">monerujo Servo</string>
 
