--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -132,7 +132,7 @@
     <string name="label_wallet_receive">Motta</string>
     <string name="label_wallet_send">Gi</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR ubekrefta</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s ubekrefta</string>
 
     <string name="service_description">monerujo tjeneste</string>
 
