--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -132,7 +132,7 @@
     <string name="label_wallet_receive">Ontvangen</string>
     <string name="label_wallet_send">Geven</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR onbevestigd</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s onbevestigd</string>
 
     <string name="service_description">monerujo-service</string>
 
