--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -123,7 +123,7 @@
     <string name="label_wallet_receive">Primește</string>
     <string name="label_wallet_send">Trimite</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR neconfirmat</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s neconfirmat</string>
 
     <string name="service_description">Serviciul monerujo</string>
 
