--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -133,7 +133,7 @@
     <string name="label_wallet_receive">Отримати</string>
     <string name="label_wallet_send">Відправити</string>
 
-    <string name="xmr_unconfirmed_amount">+ %1$s XMR непідтверджено</string>
+    <string name="xmr_unconfirmed_amount">+ %1$s %2$s непідтверджено</string>
 
     <string name="service_description">Служба monerujo</string>
 
