--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -442,4 +442,6 @@ aqui.</string>
     </string-array>
 
     <string name="message_qr_failed">Failed to create QR for sharing!</string>
+
+    <string name="tx_locked">Transaction amount locked until block %1$d (in %2$d blocks ≈ %3$,.2f days)</string>
 </resources>
