--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -520,4 +520,13 @@
     <string name="tx_locked">Transaction amount locked until block %1$d (in %2$d blocks ≈ %3$,.2f days)</string>
 
     <string name="label_streetmode">Street Mode enabled\nOnly new transactions will be shown</string>
+
+    <string name="pocketchange_title" translatable="false">PocketChange</string>
+    <string name="pocketchange_amount" translatable="false">10 × %1$3.1f XMR</string>
+    <string name="pocketchange_tx_detail" translatable="false">PocketChange +%1$s</string>
+
+    <string name="pocketchange_info">To reduce waiting time on repeated spending, Monerujo can create spare change at the expense of higher fees. It\'ll try to create and maintain 10 coins of the selected amount.</string>
+    <string name="pocketchange_create_title">Create Change</string>
+
+    <string name="label_apply">APPLY</string>
 </resources>
